--- a/app/src/main/res/layout/fragment_hub.xml
+++ b/app/src/main/res/layout/fragment_hub.xml
@@ -12,25 +12,15 @@
         android:background="@color/beige">
 
         <Button
-            android:id="@+id/hubToSubmitButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="164dp"
-            android:text="submit violation"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/wlcmHubTextView" />
-
-        <Button
             android:id="@+id/hubToViewButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="212dp"
             android:text="my submitted violations"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.518"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/hubToSubmitButton" />
+            app:layout_constraintTop_toBottomOf="@+id/wlcmHubTextView" />
 
         <Button
             android:id="@+id/hubToScanButton"
@@ -47,7 +37,7 @@
             android:layout_width="335dp"
             android:layout_height="0dp"
             android:layout_marginStart="38dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="88dp"
             android:layout_marginEnd="38dp"
             android:fontFamily="sans-serif-medium"
             android:text="greetings"
@@ -67,26 +57,25 @@
             android:layout_marginTop="212dp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.903"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/hubToViewButton"
             app:layout_constraintTop_toBottomOf="@+id/wlcmHubTextView" />
 
         <Button
             android:id="@+id/buttonLogOut"
-            android:layout_width="70dp"
-            android:layout_height="29dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="73dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="325dp"
             android:layout_marginBottom="31dp"
             android:text="log out"
             android:textColor="#BF0404"
             android:textColorLink="#E4DEDE"
             android:textSize="8sp"
             app:layout_constraintBottom_toTopOf="@+id/wlcmHubTextView"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
