--- a/app/src/main/res/layout/fragment_found_car.xml
+++ b/app/src/main/res/layout/fragment_found_car.xml
@@ -70,24 +70,14 @@
             app:layout_constraintTop_toBottomOf="@+id/foundColor" />
 
         <Button
-            android:id="@+id/buttonBackFound"
-            android:layout_width="50dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="21dp"
-            app:cornerRadius="50dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
             android:id="@+id/addViolationFromFound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="69dp"
-            android:layout_marginTop="297dp"
+            android:layout_marginTop="39dp"
             android:text="Add Violation"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonBackFound" />
+            app:layout_constraintTop_toBottomOf="@+id/foundPN" />
 
         <Button
             android:id="@+id/backToScanButton"
@@ -97,6 +87,17 @@
             android:layout_marginEnd="59dp"
             android:text="Scan more"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/buttonBackFound"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="@color/yellow"
+            android:src="?attr/actionModeCloseDrawable"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
