--- a/app/src/main/res/layout/fragment_hub.xml
+++ b/app/src/main/res/layout/fragment_hub.xml
@@ -6,76 +6,164 @@
     android:layout_height="match_parent"
     tools:context=".HubFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.gridlayout.widget.GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/beige">
+        android:background="@color/beige"
+        app:columnCount="1"
+        app:rowCount="2">
 
-        <Button
-            android:id="@+id/hubToViewButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="212dp"
-            android:text="my submitted violations"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.518"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/wlcmHubTextView" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp">
 
-        <Button
-            android:id="@+id/hubToScanButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="scan code"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/hubToViewButton" />
+            <Button
+                android:id="@+id/buttonLogOut"
+                android:layout_width="73dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:text="log out"
+                android:textColor="#BF0404"
+                android:textColorLink="#E4DEDE"
+                android:textSize="8sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/wlcmHubTextView"
-            android:layout_width="335dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="88dp"
-            android:layout_marginEnd="38dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="greetings"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/wlcmHubTextView"
+                android:layout_width="335dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="38dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="38dp"
+                android:layout_marginBottom="38dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="greetings"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buttonLogOut" />
 
-        <ProgressBar
-            android:id="@+id/progressBarHub"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="212dp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/hubToViewButton"
-            app:layout_constraintTop_toBottomOf="@+id/wlcmHubTextView" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
-            android:id="@+id/buttonLogOut"
-            android:layout_width="73dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="31dp"
-            android:text="log out"
-            android:textColor="#BF0404"
-            android:textColorLink="#E4DEDE"
-            android:textSize="8sp"
-            app:layout_constraintBottom_toTopOf="@+id/wlcmHubTextView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+        <androidx.gridlayout.widget.GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="573dp"
+            app:columnCount="1"
+            app:rowCount="2">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginRight="15dp"
+                app:cardCornerRadius="10px">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginTop="10px"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginBottom="10px"
+                        android:background="@color/brown"
+                        android:fontFamily="sans-serif-medium"
+                        android:gravity="center"
+                        android:text="My Violations"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/progressBarHub"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ProgressBar
+                        android:id="@+id/progressBarHub"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginEnd="43dp"
+                        android:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageButton
+                        android:id="@+id/hubToViewButton"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="250dp"
+                        android:backgroundTint="@color/yellow"
+                        android:src="@android:drawable/ic_menu_sort_by_size"
+                        android:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginRight="15dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginLeft="10px"
+                        android:layout_marginTop="10px"
+                        android:layout_marginRight="10px"
+                        android:layout_marginBottom="10px"
+                        android:background="@color/brown"
+                        android:fontFamily="sans-serif-medium"
+                        android:gravity="center"
+                        android:text="Scan"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/hubToScanButton"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageButton
+                        android:id="@+id/hubToScanButton"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="250dp"
+                        android:layout_marginTop="10px"
+                        android:layout_marginEnd="4dp"
+                        android:layout_marginBottom="10px"
+                        android:background="@color/yellow"
+                        android:src="@drawable/ic_code_scanner_auto_focus_on"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+        </androidx.gridlayout.widget.GridLayout>
+
+    </androidx.gridlayout.widget.GridLayout>
+
 </FrameLayout>
