--- a/app/src/main/res/layout/fragment_hub.xml
+++ b/app/src/main/res/layout/fragment_hub.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/buttonLogOut"
                 android:layout_width="73dp"
                 android:layout_height="36dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="35dp"
                 android:layout_marginTop="20dp"
                 android:text="log out"
                 android:textColor="#BF0404"
@@ -59,10 +59,10 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginLeft="15dp"
+                android:layout_height="130dp"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="50dp"
-                android:layout_marginRight="15dp"
+                android:layout_marginRight="30dp"
                 app:cardCornerRadius="10px">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -75,7 +75,7 @@
                         android:layout_height="0dp"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="10px"
-                        android:layout_marginEnd="40dp"
+                        android:layout_marginEnd="101dp"
                         android:layout_marginBottom="10px"
                         android:background="@color/brown"
                         android:fontFamily="sans-serif-medium"
@@ -84,7 +84,7 @@
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/progressBarHub"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -93,8 +93,8 @@
                         style="?android:attr/progressBarStyle"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:layout_marginEnd="43dp"
-                        android:visibility="visible"
+                        android:layout_marginEnd="26dp"
+                        android:visibility="invisible"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -116,10 +116,10 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginRight="15dp">
+                android:layout_height="130dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="30dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
