--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -25,8 +26,9 @@
             app:layout_constraintHorizontal_bias="0.849"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/pullToRefresh"
             android:layout_width="351dp"
             android:layout_height="371dp"
             android:layout_marginStart="25px"
@@ -38,12 +40,36 @@
             android:paddingTop="35px"
             android:paddingRight="35px"
             android:paddingBottom="35px"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/viewToAddButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.781" />
+            app:layout_constraintVertical_bias="0.781">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            <!--            android:layout_width="351dp"-->
+            <!--            android:layout_height="371dp"-->
+            <!--            android:layout_marginStart="25px"-->
+            <!--            android:layout_marginTop="25dp"-->
+            <!--            android:layout_marginEnd="25px"-->
+            <!--            android:layout_marginBottom="15px"-->
+            <!--            android:background="#7A502E"-->
+            <!--            android:paddingLeft="35px"-->
+            <!--            android:paddingTop="35px"-->
+            <!--            android:paddingRight="35px"-->
+            <!--            android:paddingBottom="35px"-->
+            <!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+            <!--            app:layout_constraintBottom_toTopOf="@+id/viewToAddButton"-->
+            <!--            app:layout_constraintEnd_toEndOf="parent"-->
+            <!--            app:layout_constraintStart_toStartOf="parent"-->
+            <!--            app:layout_constraintTop_toTopOf="parent"-->
+            <!--            app:layout_constraintVertical_bias="0.781" />-->
+
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <Button
             android:id="@+id/viewToAddButton"
