--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -8,13 +8,13 @@
     android:layout_marginTop="10px"
     android:layout_marginEnd="10px"
     android:layout_marginBottom="10px"
-    android:background="@color/yellow"
     android:padding="8dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+        android:padding="8dp"
+        app:cardCornerRadius="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
