--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -27,7 +27,6 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/pullToRefresh"
             android:layout_width="351dp"
             android:layout_height="371dp"
@@ -35,7 +34,7 @@
             android:layout_marginTop="25dp"
             android:layout_marginEnd="25px"
             android:layout_marginBottom="15px"
-            android:background="#7A502E"
+            android:background="@drawable/rounded_corners2"
             android:paddingLeft="35px"
             android:paddingTop="35px"
             android:paddingRight="35px"
@@ -45,11 +44,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.781">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
             <!--            android:layout_width="351dp"-->
             <!--            android:layout_height="371dp"-->
             <!--            android:layout_marginStart="25px"-->
@@ -102,7 +102,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
-            android:background="@color/blackish"
+            android:background="@drawable/rounded_corners"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:text="List"
@@ -111,6 +111,7 @@
             app:layout_constraintHorizontal_bias="0.509"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/backButtonView" />
+
 
         <ImageView
             android:id="@+id/imageView2"
@@ -133,4 +134,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </FrameLayout>
