--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -38,6 +38,7 @@
                 android:id="@+id/expandableLayout"
                 android:layout_width="0dp"
                 android:layout_height="188dp"
+                android:background="@drawable/notepad_back"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -142,6 +143,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="8dp"
                     android:text="plate number"
+                    android:textColor="@color/blackish"
                     app:layout_constraintStart_toEndOf="@+id/textView4"
                     app:layout_constraintTop_toBottomOf="@+id/modelTextView" />
 
@@ -152,6 +154,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="8dp"
                     android:text="model"
+                    android:textColor="@color/blackish"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
                     app:layout_constraintTop_toBottomOf="@+id/makeTextView" />
 
@@ -162,6 +165,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="8dp"
                     android:text="make"
+                    android:textColor="@color/blackish"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
                     app:layout_constraintTop_toBottomOf="@+id/carIdTextView" />
 
@@ -172,6 +176,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="8dp"
                     android:text="carId"
+                    android:textColor="@color/blackish"
                     app:layout_constraintStart_toEndOf="@+id/textView"
                     app:layout_constraintTop_toBottomOf="@+id/rowCountTextView" />
 
@@ -181,6 +186,7 @@
                 android:id="@+id/expandableLayoutEdit"
                 android:layout_width="0dp"
                 android:layout_height="184dp"
+                android:background="@drawable/notepad_back"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -246,6 +252,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="8dp"
                     android:text="TextView"
+                    android:textColor="@color/blackish"
                     app:layout_constraintStart_toEndOf="@+id/textView13"
                     app:layout_constraintTop_toBottomOf="@+id/carIdEditText" />
 
@@ -280,6 +287,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="8dp"
                     android:text="TextView"
+                    android:textColor="@color/blackish"
                     app:layout_constraintStart_toEndOf="@+id/textView15"
                     app:layout_constraintTop_toBottomOf="@+id/modelEditText" />
 
@@ -290,6 +298,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="8dp"
                     android:text="TextView"
+                    android:textColor="@color/blackish"
                     app:layout_constraintStart_toEndOf="@+id/textView14"
                     app:layout_constraintTop_toBottomOf="@+id/makeEditText" />
 
@@ -312,6 +321,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="8dp"
                     android:text="TextView"
+                    android:textColor="@color/blackish"
                     app:layout_constraintStart_toEndOf="@+id/textView7"
                     app:layout_constraintTop_toBottomOf="@+id/rowCountEditText" />
 
